# jira-cli

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: run_tests.yaml
src/commands/: __init__.py  parsers.py
src/commands/config/: __init__.py  parsers.py
src/commands/config/show/: __init__.py  (+2 more)
src/commands/ticket/: __init__.py
src/config/: config.py
src/config/type_definitions/: __init__.py  config_raw.py
src/constants/: __init__.py  constants.py  defaults.py  enum_commands.py  enum_subcommands.py  help_commands.py  help_subcommands.py
src/jira_cli/: __init__.py  __main__.py  cli.py  parser.py
src/jira_cli/commands/: __init__.py  parsers.py
src/jira_cli/config/: __init__.py  config.py
src/jira_cli/constants/: __init__.py  defaults.py  enum_commands.py  enum_subcommands.py  help_commands.py  help_subcommands.py
src/jira_cli/jira_client/: __init__.py  client.py  constants.py
src/jira_cli/parsers/: __init__.py  _base.py  board_type.py  id.py  identifier.py  jql.py  limit.py  log_level.py  number.py  path.py  project.py
src/jira_cli/tests/: test_cli.py
src/jira_cli/tui/: __init__.py  client.py
src/jira_cli/type_definitions/: command_module.py  subcommand_module.py  subcommands_property.py
src/jira_cli/utils/: __init__.py  output.py
src/jira_client/: client.py  constants.py
src/parsers/: __init__.py  jql.py  limit.py  log_level.py  path.py
src/test_utils/: parametrize.py
src/type_definitions/: __init__.py  parser_callable.py  subcommand_module.py  subcommands_property.py
(+41 files in other folders)
