[project]
name = "jira-cli"
version = "0.1"
description = "Jira CLI"
readme = "README.md"
requires-python = ">=3.14.0"

  [[project.authors]]
  name = "Christopher Johnstone"
  email = "chrisj97@proton.me"

  [project.scripts]
  jira = "jira_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jira_cli", "jira_cli.*"]
exclude = ["*test*"]
namespaces = true

[tool.pytest.ini_options]
addopts = '-n auto --ruff --ruff-format --ty'
